examples/bad/hold_field_after_move.mko
// Must fail: field access after hold move
struct Point {
    x: int
    y: int
}

fn main() {
    hold let p = Point { x: 1, y: 2 }
    hold let q = p
    print_int(p.x)
    print_int(q.y)
}
